<resources>
    <string name="app_name">DroneTracker</string>
    <string name="select_object">点击视频选择跟踪目标</string>
    <string name="tracking_enabled">跟踪中</string>
    <string name="tracking_disabled">未跟踪</string>
    <string name="distance">远近距离: </string>
    <string name="horizontal_angle">水平距离: </string>
    <string name="vertical_angle">竖直距离: </string>
    <string name="bluetooth_connect">连接蓝牙</string>
    <string name="bluetooth_disconnect">断开连接</string>
    <string name="connecting">连接中...</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="select_device">选择要连接的设备</string>
    <string name="no_paired_devices">未找到已配对设备，请先在系统设置中配对</string>
    <string name="cancel">取消</string>
    <string name="switch_camera">切换镜头</string>
    <string name="phone_camera">手机摄像头</string>
    <string name="usb_camera">USB摄像头</string>
    <string name="tracking_pause_hint">请先点击跟踪中按钮暂停跟踪</string>
</resources>