<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true">

    <com.example.dronetracker.SimpleUVCCameraTextureView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/rightControlArea" />

    <com.example.dronetracker.VideoOverlayView
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/rightControlArea" />

    <LinearLayout
        android:id="@+id/infoPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:background="@color/overlay"
        android:orientation="vertical"
        android:padding="12dp"
        android:minWidth="140dp">

        <TextView
            android:id="@+id/trackingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_disabled"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/horizontalAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_angle"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/verticalAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vertical_angle"
            android:textColor="@color/yellow"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/yellow"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rightControlArea"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/overlay">

        <TextView
            android:id="@+id/labelNear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:text="近"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/labelFar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:text="远"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"/>
    </RelativeLayout>

    <SeekBar
        android:id="@+id/distanceSlider"
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="-270dp"
        android:max="100"
        android:progress="50"
        android:rotation="270"
        android:thumb="@drawable/ic_thumb"
        android:progressDrawable="@drawable/seekbar_style"/>

    <LinearLayout
        android:id="@+id/flightControlPanel"
        android:layout_width="434dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomButtonLayout"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-7dp"
        android:layout_toLeftOf="@id/rightControlArea"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已上锁"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="自动"
                android:textColor="@color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/manualControlLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnTurnLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="左转"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="前进"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnTurnRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="右转"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="向左"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnTakeoff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/accent_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="起飞"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="向右"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="上升"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnBackward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="后退"
                        android:textColor="@color/white"
                        tools:ignore="TextContrastCheck" />

                    <Button
                        android:id="@+id/btnDown"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@color/primary_color"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="下降"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/joystickLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.example.dronetracker.JoystickView
                    android:id="@+id/joystickLeft"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1" />

                <com.example.dronetracker.JoystickView
                    android:id="@+id/joystickRight"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/rightControlArea"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/bluetoothButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/primary_color"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/bluetooth_connect"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/trackingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/tracking_disabled"
            android:textColor="@color/white"
            android:background="@color/accent_color"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

        <Button
            android:id="@+id/switchCameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/switch_camera"
            android:textColor="@color/white"
            android:background="@color/primary_color"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/sliderValueTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tooltip"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="5.0"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        android:layout_toLeftOf="@id/rightControlArea"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
